Revision history for Perl extension HTML::Tidy5.

The HTML::Tidy5 module is an HTML5-compatible upgrade from the HTML::Tidy module.


NEXT
====================================
[FIXES]
Fixed test failure.


1.00    Tue Mar 20 16:51:52 CDT 2018
====================================
First production release.  HTML::Tidy5 relies on version 5.6.0 of the
tidy-html5 library.  See http://html-tidy.org/ for information about
the tidy-html5 library.


[INCOMPATIBILITIES WITH HTML::Tidy]
In HTML::Tidy, HTML::Tidy::Message objects had overloaded string context.
In HTML::Tidy5, you must explicitly call the ->as_string method for
HTML::Tidy5::Message.