@@ -1,10 +1,16 @@
 Revision history for Perl extension HTML::Tidy5.
 
-The HTML::Tidy5 module is an HTML5-compatible upgrade from the HTML::Tidy module.
+The HTML::Tidy5 module is an HTML5-compatible upgrade from the HTML::Tidy
+module.
 
 
 NEXT
 ====================================
+[ENHANCEMENTS]
+Add Test::HTML::Tidy5 and the html_tidy_ok() function for testing HTML
+in your tests.
+
+
 [FIXES]
 Fixed test failure.
 
